--- a/nesting/style.css
+++ b/nesting/style.css
@@ -34,9 +34,53 @@ a:hover {
   background:rgba(0,0,0,0.4);
 }
 
-
+/* our flex container */
 .slider-nav ul {
   list-style: none;
   margin: 0;
   padding: 0;
+  display: flex;
+  /*align-items: center;*/
 }
+
+/* our first flex item */
+.slider-nav li {
+  flex: 2; /* This is flex item -ish */
+  /*border: 1px solid red;*/
+  text-align: center;
+  display: flex; /* This is flex container -ish */
+  /*align-items: center;*/
+}
+
+.slider-nav a {
+  flex-basis: 100%;
+  /* We want to stretch as well as center */
+  display: flex;
+  align-items: center;
+}
+
+.slider-nav .arrow {
+  flex: 1;
+}
+
+.arrow a {
+  font-size: 30px;
+}
+
+.slider-nav span {
+  text-align: center;
+  display: block;
+  width: 100%;
+}
+
+
+
+
+
+
+
+
+
+
+
+/*   */
