--- a/equalHeightElements/style.css
+++ b/equalHeightElements/style.css
@@ -33,3 +33,27 @@ a {
 }
 
 /* Flexbox Starts Here: */
+
+.elements {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.item {
+ flex: 0 1 calc(33.33% - 20px);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*    */
