--- a/app/style.css
+++ b/app/style.css
@@ -100,3 +100,54 @@ a.button {
 /*
   Overall Layout
 */
+
+.app-wrap {
+  display: flex;
+  flex-direction: column;
+}
+
+.app-wrap > * {
+  flex: 1 1 auto;
+}
+
+/*
+  Header
+*/
+.app-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+/*
+  content
+*/
+.content {
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+}
+
+/*
+  Icon Bar
+*/
+.icon-bar {
+  display: flex;
+  align-items: center;
+}
+
+.icon-bar a {
+  flex: 1;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/*   */
